codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• 调用中 search.find_docs({"query":"ratatui styling","limit":3})
