codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• 已探索
  └ 读取 auth.rs, shimmer.rs
