codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• 已探索
  └ 搜索 shimmer_spans
    读取 shimmer.rs
    读取 status_indicator_widget.rs
