codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__completed_mcp_tool_call_multiple_outputs_inline_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• 已调用 metrics.summary({"metric":"trace.latency","window":"15m"})
  └ 延迟摘要：p50=120ms，p95=480ms。
    未检测到异常。
