codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
■ 消息超出最大长度限制：最多 1048576 个字符，当前为 1048577 个字符。
