codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__mcp_inventory_loading_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• 正在加载 MCP 清单…
