codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__mcp_tools_output_from_statuses_renders_status_only_servers.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP 工具

  • plugin_docs
    • 认证：Unsupported
    • 命令：docs-server --stdio
    • 工具：lookup
    • 资源：（无）
    • 资源模板：（无）
