codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP 工具

  • docs
    • 状态：已启用
    • 认证：Unsupported
    • 命令：docs-server
    • 环境变量：TOKEN=*****, APP_TOKEN=*****
    • 工具：list
    • 资源：（无）
    • 资源模板：（无）

  • http
    • 状态：已启用
    • 认证：Unsupported
    • URL：https://example.com/mcp
    • HTTP headers：Authorization=*****
    • Env HTTP headers：X-API-Key=API_KEY_ENV
    • 工具：ping
    • 资源：（无）
    • 资源模板：（无）
